style.css
/* ... */
.landscape img {
    height: 100%;
    width:auto;
}

div.main {
    width: 100%;
    background: #EEEEEE;
}

div.footer {
    width:75%;
    max-width: 1000px;
    margin-left:auto;
    margin-right:auto;
    margin-top:5rem;
    padding-top:3rem;
    height:10rem;
    position: relative;
}

img.member-logos {
    height:3rem;
    width:auto;
    padding: 0rem 1rem 0rem 1rem;
    display: inline-block;
    position: relative;
    margin-top:1rem;
}

p.footer {
    display: inline-block;
    position: absolute;
    top:6rem;
    right:0;
    font-size:0.7rem;
}

div.top-bar {
    width:100%;
    height:7rem;
    position: relative;
    padding-top:1.8rem;
    background-color:#FFFFFF;
}

div.top-bar-content {
    width:75%;
    margin-left: auto;
    margin-right:auto;
    max-width: 1000px;
}

div.logo {
    height: inherit;
    left: 0px;
    display: inline-block;
    position: relative;
    margin-top: 0px;
    padding-top: 0px;
}

.logo h1 {
    font-family: "BlackChancery", sans-serif;
    font-size: 1.8rem;
    margin-top: 0rem;
    letter-spacing: 0.15rem;
    color:#2B60DE;
}

.logo h6 {
    font-size: 0.7rem;
    text-align: center;
    font-weight: 300;
    color:#2B60DE;
}

.logo a, a:hover, h1 {
    color:#000000;
    text-decoration: none;
}

div.category {
    padding-top: 3rem;
}

div.category-content {
    height:18rem;
    position: relative;
}

div.featured-image {
    float:left;
    width:70%;
    height:100%;
    overflow-x:hidden;
    overflow: visible;
    position:relative;
}

h1 {
    font-family: "Fira Sans", sans-serif;
    font-size: 2rem;
    font-weight: normal;
}

ul.category-title-list {
    margin: 0 0 0 0;
    vertical-align:middle;
    font-size: 1rem;
    list-style: none;
    display:table-cell;
    padding-left: 0;
}

.category-title-list li {
    border-bottom: solid;
    display: block;
    text-align: center;
    border-width:2px;
    border-color: #D8D8D8;
}

.category-title-list li:first-child {
    border-top: solid;
    border-width:2px;
    border-color: #D8D8D8;
}

div.category-titles {
    padding-left: 1.5rem;
    float:left;
    height: inherit;
    width:30%;
    display:table;
}

div.testimonials {
    max-height: 15rem;
    width:75%;
    max-width:1000px;
    margin-right: auto;
    margin-left: auto;
    margin-top:3rem;
    padding: 1rem 9rem;
}

div.testimonial_quote {
    font-size: 0.75rem !important;
}

div.testimonial_wrapper, div.testimonial_slider_instance {
    height: 100% !important;
}

div.testimonial_slideri {
    height: auto !important;
}

span.testimonial_avatar img {
    margin-left: auto !important;
    margin-right: auto !important;
    display: block !important;
    margin-bottom: 1rem !important;
}

.testimonial_by {
    text-align: center;
    font-size: 0.70rem !important;
}

div.newsletter {
    margin-left: auto;
    margin-right: auto;
    width:60%;
    padding-top: 5rem;
    padding-bottom: 5rem;
    max-width: 1000px;
}

div.newsletter p {
    font-family: "Fira Sans", sans-serif;
}

p.subscription-text1 {
    font-size: 1rem;
}

div.newsletter-input {
    height: 3rem;
}

#newsletter-success {
    display:none;
}

div.newsletter-content {
    width:100%;
    margin-left: auto;
    margin-right: auto;
}

input.newsletter-email {
    width: 70%;
    max-width:450px;
    height: 3rem;
    border-radius: 3px;
    padding-left: 1rem;
    /* Input Background: */
    border: 1px solid #979797;
    -moz-box-shadow:    inset 0px 1px 3px 0px rgba(0,0,0,0.50);
    box-shadow:         inset 0px 1px 3px 0px rgba(0,0,0,0.50);
}

input.newsletter-submit {
    width: 20%;
    max-width: 120px;
    height: 3rem;
    background: #2B60DE;
    border: none;
    color: #ffffff;
    margin-left: 1rem;
}


/*  Menu bar css styling  */

.responsive-menu {
    background-color:#000000;
}


#responsive-menu div {
    background-color:#000000;
}

#responsive-menu li {
    background-color:#000000;
}

.menu-container {
    position:absolute;
    width:40%;
    min-width:370px;
    height:inherit;
    display: inline-block;
    right:0;
}

#menu-main-nav {
    width:100%;
}

.menu-main-nav-container {
    width: 100%;
    font-size: 1rem;
    position: absolute;
    right:0;
}


.menu-main-nav-container ul, .menu-main-nav-container li {
    list-style: none;
    margin: 0;
    padding: 0;
    width: 10rem;
}
.menu-main-nav-container ul {
    position: relative;
    z-index: 19;
    text-align: center;
}
.menu-main-nav-container ul li {
    float: left;
    min-height: 1px;
    vertical-align: middle;
}
.menu-main-nav-container ul li:last-child {
    border-right: none;
}
.menu-main-nav-container ul li.hover, .menu-main-nav-container ul li:hover {
    position: relative;
    z-index: 20;
    cursor: default;
}
.menu-main-nav-container ul ul {
    visibility: hidden;
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 21;
    width: 100%;
}
.menu-main-nav-container ul ul li {
    float: none;
    background-color: rgba(255, 255, 255, 0.95);
}
.menu-main-nav-container ul ul ul {
    top: 0;
    left: auto;
    right: -99.5%;
}
.menu-main-nav-container ul li:hover > ul {
    visibility: visible;
}
.menu-main-nav-container ul ul {
    bottom: 0;
    left: 0;
}
.menu-main-nav-container ul ul {
    margin-top: 0;
}
.menu-main-nav-container ul ul li {
    font-weight: normal;
}
.menu-main-nav-container a {
    display: block;
    line-height: 1em;
    text-decoration: none;
    color:#000;
    padding: 0 12px;
}

.menu-main-nav-container > ul {
    display: table-cell;
    vertical-align: middle;
}

.menu-main-nav-container:after, .menu-main-nav-container ul:after {
    content: '';
    display: block;
    clear: both;
}

.menu-main-nav-container ul ul {
    text-transform: none;
    min-width: 100%;
    max-width: 100%;

}
.menu-main-nav-container ul ul a {
    color: #000000;
    border-top: 0 none;
    line-height: 150%;
    padding: 16px 20px;
}
.menu-main-nav-container ul ul ul {
    border-top: 0 none;
}
/* ... */

